--- a/src/views/homepage.ejs
+++ b/src/views/homepage.ejs
@@ -5,11 +5,12 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>fullstack</title>
 </head>
 
 <body>
     <h1>Hello world form views</h1>
+    <p><%=data %></p>
 </body>
 
 </html>
