--- a/src/views/displayCRUD.ejs
+++ b/src/views/displayCRUD.ejs
@@ -2,7 +2,7 @@
 <html lang="en">
 
 <head>
-    <title>Bootstrap Example</title>
+    <title>Get CRUD</title>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/css/bootstrap.min.css">
@@ -21,7 +21,8 @@
                     <th>Email</th>
                     <th>Firstname</th>
                     <th>Lastname</th>
-                    <th>address</th>
+                    <th>Address</th>
+                    <th>Action</th>
                 </tr>
             </thead>
             <tbody>
@@ -45,6 +46,10 @@
                     </td>
                     <td>
                         <%= dataTable[i].address %>
+                    </td>
+                    <td>
+                        <a href="/edit-crud?id=<%= dataTable[i].id%>" class="btn-edit" type="button">Edit</a>
+                        <a class="btn-delete" type="button">Delete</a>
                     </td>
                 </tr>
                 <% } %>
